rotate camera, make synchronize work

--- a/check.kv
+++ b/check.kv
@@ -90,9 +90,9 @@ WindowManager:
         play: False
         canvas.before:
             PushMatrix
-                Rotate:
-                    angle: -90
-                    origin: root.center
+            Rotate:
+                angle: -90
+                origin: self.center
         canvas.after:
             PopMatrix
     
