--- a/check.kv
+++ b/check.kv
@@ -88,6 +88,9 @@ WindowManager:
         size_hint: [1.,0.7]
         #resolution: 1920, 1080
         play: False
+
+        keep_ratio: True
+        allow_stretch: True
         canvas.before:
             PushMatrix
             Rotate:
